assets/scss/modules/_code.scss
.snippet--block {
  margin: 10px 0 20px 0;
  padding: 20px;
  border: none;
  color: $grey-0;
  line-height: 2em;
}

pre.snippet--block {
  font-size: 14px;
}

.snippet--inline {
  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
}

code.snippet--inline { 
  background-color: transparent;
  border: none;
  padding: 0;
  color: $grey-1;
}

.tag {
  background-color: #DEE0E2;
  color: $black;
  padding: 3px 8px 1px 8px;
  @include border-radius(5px);
}

